<resources>
    <string name="app_name">IMCA Library</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="sign_up_here">New user? Sign up here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="imca_library">IMCA Library</string>
    <string name="empty_error_msg">Field cannot be left blank</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_directory">Directory</string>
    <string name="menu_notification">Notification</string>
    <string name="sign_in_subtitle">Login to continue</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_subtitle">Create a new account</string>
    <string name="sign_up_text">Already have an account? Sign in here!</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_subtitle">We are here to help you</string>
    <string name="please_wait_msg">Please wait</string>
    <string name="menu_about_us">About us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home_log_out">log out</string>
    <string name="log_out_dialog_msg">Do you want to log out?</string>
    <string name="yes_msg">Yes</string>
    <string name="no_msg">No</string>
    <string name="menu_history">My history</string>
    <string name="about_us">About US</string>
    <string name="history_title">Transactions</string>
    <string name="history_subtitle">Here is the list of your previous transactions</string>
    <string name="copyright_msg">® All rights reserved 2019</string>
    <string name="made_by_text">Made by</string>
    <string name="smatters_studio_text">Smartters\' Studio</string>
    <string name="about_us_subtitle">Information about the app</string>
    <string name="directory_title">Find Book</string>
    <string name="directory_subtitle">Search and find your desired book</string>
    <string name="roll">Roll</string>
</resources>
