<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="@id/bg_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sign_in_guideline">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            android:textColor="#fff"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_subtitle"
            android:textColor="#fff"
            android:textSize="@dimen/subtitle_text_size" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        app:cardCornerRadius="20sp"
        app:cardElevation="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="0sp"
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_height="0sp"
                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
                app:layout_constraintRight_toRightOf="@id/right_guideline"
                app:layout_constraintTop_toTopOf="@id/top_guideline"
                app:layout_constraintBottom_toTopOf="@id/bottom_guideline">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1">

                    <EditText
                        android:textSize="@dimen/edit_text_size"
                        android:id="@+id/sign_up_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/person_vector"
                        android:drawablePadding="5sp"
                        android:hint="@string/name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1">

                    <EditText
                        android:textSize="@dimen/edit_text_size"
                        android:id="@+id/sign_up_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="5sp"
                        android:drawableStart="@drawable/phone_vector"
                        android:hint="@string/phone"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1">

                    <EditText
                        android:textSize="@dimen/edit_text_size"
                        android:id="@+id/sign_up_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/mail_vector"
                        android:drawablePadding="5sp"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1">

                    <EditText
                        android:textSize="@dimen/edit_text_size"
                        android:id="@+id/sign_up_roll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/roll_vector"
                        android:drawablePadding="5sp"
                        android:hint="@string/roll"
                        android:inputType="textCapCharacters" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#8655FC">

                    <EditText
                        android:textSize="@dimen/edit_text_size"
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/lock_vector"
                        android:drawablePadding="5sp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:elevation="8sp"
        android:onClick="doRegister"
        android:text="@string/register"
        android:padding="15sp"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintLeft_toLeftOf="@id/button_left_guideline"
        app:layout_constraintRight_toRightOf="@id/button_right_guideline"
        app:layout_constraintTop_toTopOf="@id/button_guideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:onClick="goToLogin"
        android:text="@string/sign_up_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/link_text_size"
        app:layout_constraintLeft_toLeftOf="@id/button_left_guideline"
        app:layout_constraintRight_toRightOf="@id/button_right_guideline"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sign_in_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bg_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>